--- a/Tarea_4_enunciado.ipynb
+++ b/Tarea_4_enunciado.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,8 +116,45 @@
       "source": [
         "**Respuesta**\n",
         "\n",
-        "`Escriba su respuesta aquí`\n"
+        "`Necesitamos calcular entonces:`\n",
+        "\n",
+        "$$\\pi(8,DET,NOUN) = \\max_{w \\in S_{k-2} }  \\pi(7,w,DET)*q(NOUN|w,DET)*e(pasta|NOUN) $$\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "con $S_{k-2} = \\{ DET,NOUN,VERB,ADP \\}$, luego debemos calcular cada combinación:\n"
+      ],
+      "metadata": {
+        "id": "hLWkDPzFQlGT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$\\pi(7,DET,DET)*q(NOUN|DET,DET)*e(pasta|NOUN) = 0.1*0*0.6=0$$\n",
+        "\n",
+        "$$\\pi(7,NOUN,DET)*q(NOUN|NOUN,DET)*e(pasta|NOUN) = 0.2*0*0.6=0$$\n",
+        "\n",
+        "$$\\pi(7,VERB,DET)*q(NOUN|VERB,DET)*e(pasta|NOUN) = 0.01*0.3*0.6=0.0018$$\n",
+        "\n",
+        "$$\\pi(7,ADP,DET)*q(NOUN|ADP,DET)*e(pasta|NOUN) = 0.5*0*0.6=0$$"
+      ],
+      "metadata": {
+        "id": "m8V8qjCwQ2n1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Finalmente, tomando máximo:\n",
+        "\n",
+        "$$\\pi(8,DET,NOUN) = 0.0018$$"
+      ],
+      "metadata": {
+        "id": "VBVkBSXYSJ-O"
+      }
     },
     {
       "cell_type": "markdown",
@@ -133,31 +169,31 @@
         "\n",
         "**Respuesta:** \n",
         "\n",
-        "`Escriba su respuesta aquí`\n",
+        "`Estos modelos se utilizan para modelar y analizar secuencias, principalmente textos, resolviendo tareas de etiquetado y clasificación de secuencias, como POS tagging, que consiste en asignar una etiqueta gramatical a cada palabra en una oración, NER, dónde el objetivo es identificar y clasificar nombres de personas, organizaicones, lugares, etc. También en parsing, dónde se asigna una estructura sintáctica a una oración.`\n",
         "\n",
         "#### 2.2. ¿Qué modelos usan features? ¿Qué ventajas conlleva esto? (0.1 pts)\n",
         "\n",
         "**Respuesta:** \n",
         "\n",
-        "`Escriba su respuesta aquí`\n",
+        "`Los modelos que utilizan features son los MEMM's y CRF's, añadiendo caracerísticas inferibles adicionales, además de las secuencias de entrada, permitiendo mejorar la precisión de clasificación de secuencias. Entre las ventajas que conlleva esto, es obtener representaciones mucho más ricas qu en HMM's, además de poder incorporar conocimiento experto y reducir sensibilidad en las probabilidades de transición.`\n",
         "\n",
         "#### 2.3. ¿Cómo maneja cada uno de los modelos las palabras con baja frecuencia en el set de train? (0.1 pts)\n",
         "\n",
         "**Respuesta:** \n",
         "\n",
-        "`Escriba su respuesta aquí`\n",
+        "`Los HMM's pueden incorporar un suavizado de Laplace para asignar probabilidades a las palabras poco frecuentes, MEMM's al utilizar features adicionales, se puede incorporar selección de características o reducción de dimensionalidad. CRF's pueden incorporar regularización, penalizando características poco frecuentes.`\n",
         "\n",
         "#### 2.4. ¿Qué le permite a los CRF realizar decisiones globales? ¿Qué diferencia con respecto a los MEMMs permite lograr esto? ¿Por qué los HMMs tampoco son capaces de tomar decisiones globales? (0.1 pts)\n",
         "\n",
         "**Respuesta:** \n",
         "\n",
-        "`Escriba su respuesta aquí`\n",
+        "`Lo que le permite a CRF realizar decisiones globales es que estos consideran dependencias entre las etiquetas en toda la secuencia, la principal diferencia con MEMM's es que modelan directamente la distribución condicional de las etiquetas dada la secuencia completa de observaciones, lo que se aprecia en las normalizaciones utilizadas, es decir, el denominador de cada softmax utilizada. Los HMM's como asumen dependencia de primer o segundo orden, las etiquetas actuales dependen de una o dos anteriores, no pudiendo considerar información de la secuencia total.`\n",
         "\n",
         "#### 2.5 Dado una secuencia de $x_1, ..., x_m$ ¿Cuántas posibles secuencias de etiquetas se pueden generar para un conjunto de etiquetas $S$ con $|S|=k$ ? ¿Analizarlas todas sería computacionalmente tratable? (0.1 pts)\n",
         "\n",
         "**Respuesta:**\n",
         "\n",
-        "`Escriba su respuesta aquí`"
+        "`El número total de posibles secuencias de etiquetas que se pueden generar es k^m, para cada una de las m observaciones hay k opciones posibles de etiquetas. Computacionalmente se vuelve complejo analizar todas, si se tienen 10 etiquetas y una secuencia de largo 10, entonces hay 10^10 = 10.000.000.000 posibles secuencias, viendo que este número crece exponencialmente si la secuencia es cada vez más larga, complejizando el análisis de estas.`"
       ]
     },
     {
