Creado mediante Colaboratory

--- a/Competencia2.ipynb
+++ b/Competencia2.ipynb
@@ -403,6 +403,18 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "NwZSFl0dV4Q_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "27csY87GaSFO",
@@ -467,8 +479,6 @@
       "source": [
         "# NUEVO DATALOADER Y OTRAS COSAS NECESARIAS\n",
         "from collections import Counter, OrderedDict\n",
-        "\n",
-        "import torch\n",
         "\n",
         "from torch.utils.data import DataLoader, Dataset\n",
         "from torch.nn.utils.rnn import pad_sequence\n",
@@ -584,9 +594,10 @@
       },
       "outputs": [],
       "source": [
-        "#BATCH_SIZE = 22\n",
+        "BATCH_SIZE = 22\n",
         "# Prueba 1\n",
-        "BATCH_SIZE = 64\n",
+        "BATCH_SIZE = 32*(2**0)\n",
+        "BATCH_SIZE = 32*(2**1)\n",
         "\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "print('Using', device)\n",
@@ -861,6 +872,28 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#class NER_RNN_AT(nn.Module):"
+      ],
+      "metadata": {
+        "id": "yzc-llA37J4v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#class NER_RNN_EMB_AT(nn.Module):"
+      ],
+      "metadata": {
+        "id": "_WA-JeM1uosu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "cCl3530VaSG7"
@@ -903,11 +936,11 @@
         "# tamaño del vocabulario. recuerden que la entrada son vectores bag of word(one-hot).\n",
         "INPUT_DIM = len(TEXT.vocab)\n",
         "EMBEDDING_DIM = 300  # dimensión de los embeddings.\n",
-        "HIDDEN_DIM = 512  # dimensión de la capas LSTM\n",
+        "HIDDEN_DIM = 256*2  # dimensión de la capas LSTM\n",
         "OUTPUT_DIM = len(NER_TAGS.vocab)  # número de clases\n",
         "\n",
-        "N_LAYERS = 2  # número de capas.\n",
-        "DROPOUT = 0.8\n",
+        "N_LAYERS = 1  # número de capas.\n",
+        "DROPOUT = 0.7\n",
         "BIDIRECTIONAL = True\n",
         "\n",
         "# Creamos nuestro modelo.\n",
@@ -924,11 +957,9 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import torchtext.vocab as vocab"
-      ],
+      "source": [],
       "metadata": {
-        "id": "LGw1P6V1UjEw"
+        "id": "-K8qsg3jW14c"
       },
       "execution_count": null,
       "outputs": []
@@ -937,8 +968,10 @@
       "cell_type": "code",
       "source": [
         "# PRUEBA 2:\n",
+        "\n",
+        "import torchtext.vocab as vocab\n",
         "# Suponiendo que tienes los vectores de palabras en el archivo 'cwlce.vec'\n",
-        "EMBEDDING_FILE = '/content/drive/MyDrive/Universidad/11° Semestre/Natural Lenguage Processing/cwlce.vec'\n",
+        "EMBEDDING_FILE = '/content/drive/MyDrive/Colab Notebooks/cwlce.vec'\n",
         "\n",
         "# Cargar los embeddings preentrenados utilizando la función load_embeddings\n",
         "embeddings = vocab.Vectors(EMBEDDING_FILE)\n",
@@ -950,8 +983,8 @@
         "HIDDEN_DIM = 256 # Dimensión de las capas LSTM\n",
         "OUTPUT_DIM = len(NER_TAGS.vocab)  # Número de clases\n",
         "\n",
-        "N_LAYERS = 2  # Número de capas\n",
-        "DROPOUT = 0.3\n",
+        "N_LAYERS = 1  # Número de capas\n",
+        "DROPOUT = 0.15\n",
         "BIDIRECTIONAL = True\n",
         "\n",
         "# Crear una instancia del modelo NER_RNN_EMB con los parámetros y los embeddings preentrenados\n",
@@ -969,21 +1002,22 @@
     {
       "cell_type": "code",
       "source": [
-        "# Cargar los embeddings preentrenados utilizando la función load_embeddings\n",
+        "# PRUEBA 3:\n",
+        "import torchtext.vocab as vocab\n",
         "# Suponiendo que tienes los vectores de palabras en el archivo 'cwlce.vec'\n",
-        "EMBEDDING_FILE = '/content/drive/MyDrive/Universidad/11° Semestre/Natural Lenguage Processing/cwlce.vec'\n",
+        "EMBEDDING_FILE = '/content/drive/MyDrive/Colab Notebooks/cwlce.vec'\n",
         "\n",
         "# Cargar los embeddings preentrenados utilizando la función load_embeddings\n",
         "embeddings = vocab.Vectors(EMBEDDING_FILE)\n",
         "EMBEDDING_DIM = embeddings.dim  # Dimensión de los embeddings\n",
         "\n",
-        "# Tamaño del vocabulario\n",
+        "# Tamaño del vocabu  lario\n",
         "INPUT_DIM = len(TEXT.vocab)\n",
         "\n",
         "HIDDEN_DIM = 256\n",
         "OUTPUT_DIM = len(NER_TAGS.vocab)\n",
         "N_LAYERS = 1\n",
-        "DROPOUT = 0.2\n",
+        "DROPOUT = 0.3\n",
         "BIDIRECTIONAL = True\n",
         "\n",
         "# Crear una instancia del modelo NER_RNN_CRF con los parámetros y los embeddings preentrenados\n",
@@ -1000,9 +1034,53 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# PRUEBA 4:\n",
+        "import torchtext.vocab as vocab\n",
+        "# Suponiendo que tienes los vectores de palabras en el archivo 'cwlce.vec'\n",
+        "EMBEDDING_FILE = '/content/drive/MyDrive/Colab Notebooks/embeddings-l-model.vec'\n",
+        "\n",
+        "# Cargar los embeddings preentrenados utilizando la función load_embeddings\n",
+        "embeddings = vocab.Vectors(EMBEDDING_FILE)\n",
+        "EMBEDDING_DIM = embeddings.dim  # Dimensión de los embeddings\n",
+        "\n",
+        "# Tamaño del vocabu  lario\n",
+        "INPUT_DIM = len(TEXT.vocab)\n",
+        "\n",
+        "HIDDEN_DIM = 128\n",
+        "OUTPUT_DIM = len(NER_TAGS.vocab)\n",
+        "N_LAYERS = 2\n",
+        "DROPOUT = 0.2\n",
+        "BIDIRECTIONAL = True\n",
+        "\n",
+        "# Crear una instancia del modelo NER_RNN_CRF con los parámetros y los embeddings preentrenados\n",
+        "model_4 = NER_RNN_EMB_CRF(INPUT_DIM, EMBEDDING_DIM, HIDDEN_DIM, OUTPUT_DIM,\n",
+        "                    N_LAYERS, BIDIRECTIONAL, DROPOUT, PAD_IDX, embeddings.vectors)\n",
+        "\n",
+        "model_4_model_name = 'MODEL_4'"
+      ],
+      "metadata": {
+        "id": "73QRisPCux9x"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# PRUEBA 5:\n"
+      ],
       "metadata": {
         "id": "ibMDG95A7QCU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2oLveacj7aw-"
       },
       "execution_count": null,
       "outputs": []
@@ -1022,7 +1100,7 @@
       "cell_type": "code",
       "source": [
         "# PRUEBA 1: model_1\n",
-        "model_1_n_epochs = 20"
+        "model_1_n_epochs = 30"
       ],
       "metadata": {
         "id": "oljYFYmY5sJ_"
@@ -1034,7 +1112,7 @@
       "cell_type": "code",
       "source": [
         "# PRUEBA 2: model_2\n",
-        "model_2_n_epochs = 30"
+        "model_2_n_epochs = 20"
       ],
       "metadata": {
         "id": "QgYAV6rN5q6U"
@@ -1046,10 +1124,34 @@
       "cell_type": "code",
       "source": [
         "# PRUEBA 3: model_3\n",
-        "model_3_n_epochs = 25"
+        "model_3_n_epochs = 20"
       ],
       "metadata": {
         "id": "Qs13xFK2C4b4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# PRUEBA 4: model_4\n",
+        "model_4_n_epochs = 20"
+      ],
+      "metadata": {
+        "id": "vSYRQeRgu5HG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# PRUEBA 5: model_5\n",
+        "model_5_n_epochs = 20"
+      ],
+      "metadata": {
+        "id": "56lSRcfe7bxF"
       },
       "execution_count": null,
       "outputs": []
@@ -1112,6 +1214,34 @@
       ],
       "metadata": {
         "id": "Aml_dBROC7Lp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# PRUEBA 4: model_4\n",
+        "TAG_PAD_IDX = NER_TAGS.vocab.get_stoi()['<PAD>']\n",
+        "# Función de pérdida\n",
+        "model_4_criterion = nn.CrossEntropyLoss(ignore_index = TAG_PAD_IDX)"
+      ],
+      "metadata": {
+        "id": "zKTueWunu-gY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# PRUEBA 5: model_5\n",
+        "TAG_PAD_IDX = NER_TAGS.vocab.get_stoi()['<PAD>']\n",
+        "# Función de pérdida\n",
+        "model_5_criterion = nn.CrossEntropyLoss(ignore_index = TAG_PAD_IDX)"
+      ],
+      "metadata": {
+        "id": "4zk43mma74gZ"
       },
       "execution_count": null,
       "outputs": []
@@ -1195,6 +1325,58 @@
         "criterion = model_3_criterion\n",
         "n_epochs = model_3_n_epochs"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t8jWnkWD7_bT"
+      },
+      "source": [
+        "---------------\n",
+        "\n",
+        "\n",
+        "### Modelo 4"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = model_4\n",
+        "model_name = model_4_model_name\n",
+        "criterion = model_4_criterion\n",
+        "n_epochs = model_4_n_epochs"
+      ],
+      "metadata": {
+        "id": "OovJciQqvDB-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M1b2I3kE7_vH"
+      },
+      "source": [
+        "---------------\n",
+        "\n",
+        "\n",
+        "### Modelo 5"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = model_5\n",
+        "model_name = model_5_model_name\n",
+        "criterion = model_5_criterion\n",
+        "n_epochs = model_5_n_epochs"
+      ],
+      "metadata": {
+        "id": "ferriqvI775E"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1304,7 +1486,7 @@
       "source": [
         "# PRUEBA 1:\n",
         "# Optimizador\n",
-        "optimizer = optim.Adam(model.parameters())"
+        "optimizer = optim.Adam(model.parameters(),lr=1e-4,weight_decay=1e-7)"
       ],
       "metadata": {
         "id": "JwG7OPfc52iU"
@@ -1317,7 +1499,7 @@
       "source": [
         "# PRUEBA 2:\n",
         "# Optimizador\n",
-        "optimizer = optim.Adam(model.parameters(),lr=0.01)"
+        "optimizer = optim.Adam(model.parameters(),lr=1e-4,weight_decay=1e-8)"
       ],
       "metadata": {
         "id": "4sgNxutc53nE"
@@ -1330,10 +1512,36 @@
       "source": [
         "# PRUEBA 3:\n",
         "# Optimizador\n",
-        "optimizer = optim.Adam(model.parameters(),lr=0.01,weight_decay=0.0001)"
+        "optimizer = optim.Adam(model.parameters(),lr=1e-3,weight_decay=1e-8)"
       ],
       "metadata": {
         "id": "1kWGRBQTGLhj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# PRUEBA 4:\n",
+        "# Optimizador\n",
+        "optimizer = optim.Adam(model.parameters(),lr=1e-2,weight_decay=1e-8)"
+      ],
+      "metadata": {
+        "id": "by6yOgLdvLeH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# PRUEBA 5:\n",
+        "# Optimizador\n",
+        "optimizer = optim.SGD(model.parameters(),lr=1e-2)"
+      ],
+      "metadata": {
+        "id": "zENpYpa8ho-q"
       },
       "execution_count": null,
       "outputs": []
@@ -1398,6 +1606,34 @@
       ],
       "metadata": {
         "id": "8_gX7m-qDzFj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# PRUEBA 4:\n",
+        "# Enviamos el modelo y la loss a cuda (en el caso en que esté disponible)\n",
+        "model = model.to(device)\n",
+        "criterion = criterion.to(device)"
+      ],
+      "metadata": {
+        "id": "dUMUggQJvO_6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# PRUEBA 5:\n",
+        "# Enviamos el modelo y la loss a cuda (en el caso en que esté disponible)\n",
+        "model = model.to(device)\n",
+        "criterion = criterion.to(device)"
+      ],
+      "metadata": {
+        "id": "prAmhWjx8M1M"
       },
       "execution_count": null,
       "outputs": []
