--- a/Competencia2.ipynb
+++ b/Competencia2.ipynb
@@ -305,7 +305,9 @@
       "metadata": {
         "id": "7HsvlfPJUSId"
       },
-      "source": []
+      "source": [
+        "* En un segundo experimento se construyó la clase NER_RNN_EMB_CRF, que utiliza una arquitectura basada en RNN bidireccionales, con 2 capas LSTM de dimensión 256, embeddings pre-entrenados de dimensión 300, utilizando los embeddings clínicos, y una capa lineal seguida de una capa de decodificación CRF, además, se agrega dropout de 0.7. Por otro lado, como parámetros adicionales que se ajustaron, se seteó un batch size de 64, con un optimizador Adam de learning rate 0.01, factor de decaimiento de peso de 1e-6, y término de estabilidad de 1e-4, considerando cross-entropy loss como criterio del modelo."
+      ]
     },
     {
       "cell_type": "markdown",
@@ -462,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "DMHUyK-_vmX5"
       },
@@ -551,7 +553,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "UXcpc7iRE6ch"
       },
@@ -566,7 +568,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {
         "id": "sLFc1TeO_GLM"
       },
@@ -582,7 +584,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "mt1GQv8Vvb-J",
         "outputId": "3d886dd1-77e4-452c-f2e8-c5518c7a873c",
@@ -646,7 +648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "9mUOOLEWiicU"
       },
@@ -722,7 +724,7 @@
         },
         "outputId": "14c650f5-9900-4c47-dbc2-0ffd3627a659"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -735,7 +737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "rMPL08XqaSG3"
       },
@@ -814,7 +816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "EHdi3QdOaSG8"
       },
@@ -839,7 +841,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "jlF1DhJeaSHA"
       },
@@ -859,7 +861,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "6G_4k99_aSHG"
       },
@@ -1245,7 +1247,7 @@
       "metadata": {
         "id": "UxlptGd29qK-"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1289,7 +1291,7 @@
       "metadata": {
         "id": "Dtv-G_kF9EP8"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1300,7 +1302,7 @@
       "metadata": {
         "id": "fUmLxnR89EP8"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1322,7 +1324,7 @@
       "metadata": {
         "id": "0hoFixgy9EP9"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1340,7 +1342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "r8YlGnjxaSHZ"
       },
@@ -1405,7 +1407,7 @@
       "metadata": {
         "id": "97gR102G9mKC"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1423,7 +1425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "Q-G_NWFcaSHe",
         "outputId": "fc0be5e5-ea37-4160-804f-207180ce3f6f",
@@ -1464,7 +1466,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": null,
       "metadata": {
         "id": "mjWDX2CJaSHh",
         "outputId": "fd1ff621-aa69-4795-d543-fd933bfd60b8",
@@ -1507,7 +1509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "AH6o8_cTaSHq"
       },
@@ -1570,7 +1572,7 @@
       "metadata": {
         "id": "by6yOgLdvLeH"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1584,7 +1586,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "dqr0AJ6_iicR"
       },
@@ -1615,7 +1617,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "DV6YLt0oiicW"
       },
@@ -1690,7 +1692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "WsRuiUuHiicY"
       },
@@ -1733,7 +1735,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "Xs-n9Y5yiica"
       },
@@ -1769,7 +1771,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "iK5lQqpviicf",
         "outputId": "95f4abaf-3b09-4287-d1c0-6a5fa147d06a",
@@ -1895,7 +1897,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "y27CNYfrjtQ-",
         "outputId": "d3c86074-eaaa-4064-bb7b-45415b58367f",
@@ -1938,7 +1940,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1967,7 +1969,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1991,7 +1993,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "s0gVbP8yiicj",
         "outputId": "33e71fbb-34bd-4588-b2bd-be4fac147653",
@@ -2036,7 +2038,7 @@
         },
         "outputId": "44806356-38c7-4231-8372-785d74c88034"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2049,7 +2051,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "oLuqFKFR9duO"
       },
